; ModuleID = '/home/carl/AnghaBench/curl/tests/server/extr_sws.c_socket_domain_is_ip.c'
source_filename = "/home/carl/AnghaBench/curl/tests/server/extr_sws.c_socket_domain_is_ip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@socket_domain = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @socket_domain_is_ip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @socket_domain_is_ip() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @socket_domain, align 4
  switch i32 %2, label %4 [
    i32 129, label %3
  ]

3:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %5

5:                                                ; preds = %4, %3
  %6 = load i32, i32* %1, align 4
  ret i32 %6
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
